# resource-graph

./: .gitignore  Draw.hs  Facility.hs  Factorio.hs  Factory.hs  Graph.hs  Main.hs  Makefile  ProductionChain.hs  Recipe.hs  Resource.hs  Throughput.hs  draw_graph.sh  factorio.yml  resources.cabal
src/: Main.hs
src/App/: Draw.hs  Facility.hs  Factory.hs  Graph.hs  ProductionChain.hs  ProductionGraph.hs  Recipe.hs  RecipeNode.hs  Resource.hs  Throughput.hs  app.cabal  recipes_factorio.yml
src/App/Factorio/: Facilities.hs  Factorio.hs  Names.hs
src/App/Factorio/Recipe/: Assembly.hs  Chemical.hs  Furnance.hs  Recipe.hs  Refinery.hs
