cabal-version:      2.4
name:               resources
version:            0.1.0.0
author:             Jakob Fischer
maintainer:         jakobfischer93@gmail.com

executable resources
    main-is:          Main.hs
    build-depends:    base ^>=4.14, yaml ^>=0.11.8.0
    hs-source-dirs:   src
    default-language: Haskell2010
    other-modules:
        App.Draw
        App.Facility
        App.Factory
        App.Graph
        App.ProductionChain
        App.Recipe
        App.Resource
        App.Throughput


