cabal-version:      2.4
name:               resources
version:            0.1.0.0
author:             Jakob Fischer
maintainer:         jakobfischer93@gmail.com

executable resources
    main-is:          Main.hs
    build-depends:    base ^>=4.14, yaml ^>=0.11.8, aeson ^>=2.1.0, containers ^>=0.6.5.1, MissingH ^>=1.5.0.1, text ^>=1.2.4.1
    hs-source-dirs:   src
    default-language: Haskell2010
    other-modules:
        App.Facility
        App.Factory
        App.Recipe
        App.Resource
        App.Throughput
        App.RecipeNode
