cabal-version:      2.4
name:               app
version:            0.1.0.0
author:             Jakob Fischer
maintainer:         jakobfischer93@gmail.com

library
    default-language: Haskell2010
    build-depends:    base ^>=4.14,yaml ^>=0.11.8.0
    exposed-modules:
        App.Draw
        App.Facility
        App.Factory
        App.Graph
        App.ProductionChain
        App.Recipe
        App.Resource
        App.Throughput


